"search_placeholder" = "type to search…";
"clear_tooltip" = "Clear unpinned items.\nSelect with ⇧ to clear all.";
"clear_all_tooltip" = "Clear all items.";
"about_tooltip" = "Read more about the application.";
"quit_tooltip" = "Quit application.";
"clear" = "Clear";
"clear_all" = "Clear all";
"about" = "About";
"quit" = "Quit";
"preferences" = "Preferences…";
"preferences_advanced" = "Advanced";
"preferences_pins" = "Pins";
"copy_modifiers_config" = "• Select with %@ pressed to copy item.";
"paste_modifiers_config" = "• Select with %@ pressed to copy and paste item.";
"format_modifiers_config" = "• Select with %@ pressed to copy, clear formatting and paste item.";
"accessibility_alert_message" = "“Manis Pocket” would like to control this computer using accessibility features.";
"accessibility_alert_comment" = "Grant access to this application in {pane}, located in {settings}.\n\nClick + button, select Manis Pocket, and toggle on the checkbox next to it.";
"accessibility_alert_deny" = "Deny";
"accessibility_alert_open" = "Open System Preferences";
"clear_alert_message" = "Are you sure you want to clear the history?";
"clear_alert_comment" = "You can't undo this action.";
"clear_alert_cancel" = "Cancel";
"clear_alert_confirm" = "Clear";
"key_used_error" = "Key is already used.";
"active_screen" = "Active screen";
"screen" = "Screen";
"system_settings_name" = "System Settings";
"system_settings_pane" = "Privacy & Security settings";
"system_preferences_name" = "System Preferences";
"system_preferences_pane" = "Security & Privacy preferences";
"copy_button_tooltip" = "Copy to clipboard";
"delete_button_tooltip" = "Delete";
"copied_toast" = "Copied!";
"delete_alert_message" = "Are you sure you want to delete this item?";
"delete_alert_comment" = "This action cannot be undone.";
"delete_alert_confirm" = "Delete";
"delete_alert_cancel" = "Cancel";
"edit" = "Edit";
"pin" = "Pin";
"unpin" = "Unpin";
"delete" = "Delete";
"add_new" = "Add new item";
