import Carbon
import XCTest

// swiftlint:disable file_length
// swiftlint:disable type_body_length
class ManisPocketUITests: XCTestCase {
    let app = XCUIApplication()
    let pasteboard = NSPasteboard.general

    let copy1 = UUID().uuidString
    let copy2 = UUID().uuidString
    let copy3 = UUID().uuidString

    // https://hetima.github.io/fucking_nsimage_syntax
    let image1 = NSImage(named: "NSAddTemplate")!
    let image2 = NSImage(named: "NSBluetoothTemplate")!

    let file1 = URL.applicationSupportDirectory.appendingPathComponent("file1.txt")
    let file2 = URL.applicationSupportDirectory.appendingPathComponent("file2.txt")

    let rtf1 = NSAttributedString(string: "foo").rtf(
        from: NSRange(0 ... 2),
        documentAttributes: [:]
    )
    let rtf2 = NSAttributedString(string: "bar").rtf(
        from: NSRange(0 ... 2),
        documentAttributes: [:]
    )

    let html1 = "<a href='#'>foo</a>".data(using: .utf8)
    let html2 = "<a href='#'>bar</a>".data(using: .utf8)

    let imageType = NSPredicate(
        format: "elementType == %lu",
        argumentArray: [XCUIElement.ElementType.image.rawValue]
    )

    var items: XCUIElementQuery {
        app.descendants(matching: .any).matching(identifier: "copy-history-item")
    }

    var itemTitles: [String] {
        items.allElementsBoundByIndex
            .sorted(by: { $0.frame.origin.y < $1.frame.origin.y })
            .compactMap { $0.value as? String }
    }

    override func setUp() {
        super.setUp()

        try? "Hello world".write(to: file1, atomically: true, encoding: .utf8)
        try? "Hello world".write(to: file2, atomically: true, encoding: .utf8)

        app.launchArguments.append("enable-testing")
        app.launch()

        copyToClipboard(copy2)
        copyToClipboard(copy1)
    }

    override func tearDown() {
        super.tearDown()
        app.terminate()
    }

    func testPopupWithHotkey() {
        popUpWithHotkey()
        assertExists(items[copy1])
        assertExists(items[copy2])
    }

    func testCloseWithHotkey() {
        popUpWithMouse()
        assertExists(items[copy1])
        simulatePopupHotkey()
        assertNotExists(items[copy1])
    }

    func testPopupWithMenubar() {
        popUpWithMouse()
        assertExists(items[copy1])
        assertExists(items[copy2])
    }

    func testNewCopyIsAdded() {
        popUpWithMouse()
        let copy3 = UUID().uuidString
        copyToClipboard(copy3)
        assertExists(items[copy3])
        app.typeKey(.escape, modifierFlags: [])
        popUpWithMouse()
        assertExists(items[copy2])
    }

    func testSearch() {
        popUpWithMouse()
        search(copy2)
        assertSearchFieldValue(copy2)
        assertExists(app.staticTexts[copy2])
        assertNotExists(items[copy1])
    }

    func testSearchFiles() throws {
        copyToClipboard(file2)
        copyToClipboard(file1)
        popUpWithMouse()
        search(file2.lastPathComponent)
        try assertExists(items[XCTUnwrap(file2.absoluteString.removingPercentEncoding)])
        try assertNotExists(items[XCTUnwrap(file1.absoluteString.removingPercentEncoding)])
    }

    func testCopyWithClick() {
        popUpWithMouse()
        items[copy2].firstMatch.click()
        assertPasteboardStringEquals(copy2)
    }

    func testCopyWithEnter() {
        popUpWithMouse()
        hover(items[copy2].firstMatch)
        app.typeKey(.enter, modifierFlags: [])
        assertPasteboardStringEquals(copy2)
    }

    func testCopyWithCommandShortcut() {
        popUpWithMouse()
        app.typeKey("2", modifierFlags: [.command])
        assertPasteboardStringEquals(copy2)
    }

    func testSearchAndCopyWithCommandShortcut() {
        popUpWithMouse()
        search(copy2)
        app.typeKey("1", modifierFlags: [.command])
        assertPasteboardStringEquals(copy2)
    }

    func testCopyImage() throws {
        copyToClipboard(image2)
        copyToClipboard(image1)
        popUpWithMouse()
        items.matching(imageType).allElementsBoundByIndex[1].click()
        try assertPasteboardDataCountEquals(XCTUnwrap(image2.tiffRepresentation?.count), forType: .tiff)
    }

    func testCopyFile() throws {
        copyToClipboard(file2)
        copyToClipboard(file1)
        popUpWithMouse()

        XCTAssertEqual(itemTitles[0 ... 1], try [
            XCTUnwrap(file1.absoluteString.removingPercentEncoding),
            XCTUnwrap(file2.absoluteString.removingPercentEncoding),
        ])

        try items[XCTUnwrap(file2.absoluteString.removingPercentEncoding)].firstMatch.click()
        assertPasteboardStringEquals(file2.absoluteString, forType: .fileURL)
    }

    func testCopyRTF() {
        copyToClipboard(rtf2, .rtf)
        copyToClipboard(rtf1, .rtf)
        popUpWithHotkey()
        XCTAssertEqual(itemTitles[0 ... 1], ["foo", "bar"])

        app.staticTexts["bar"].firstMatch.click()
        XCTAssertEqual(pasteboard.data(forType: .rtf), rtf2)
    }

    func testCopyHTML() {
        copyToClipboard(html2, .html)
        copyToClipboard(html1, .html)
        popUpWithMouse()
        XCTAssertEqual(itemTitles[0 ... 1], ["foo", "bar"])

        items["bar"].firstMatch.click()
        assertPasteboardDataEquals(html2, forType: .html)
    }

    func testDownArrow() {
        popUpWithMouse()
        app.typeKey(.downArrow, modifierFlags: [])
        app.typeKey(.enter, modifierFlags: [])
        assertPasteboardStringEquals(copy2)
    }

    func testUpArrow() {
        popUpWithMouse()
        app.typeKey(.downArrow, modifierFlags: [])
        app.typeKey(.upArrow, modifierFlags: [])
        app.typeKey(.enter, modifierFlags: [])
        assertPasteboardStringEquals(copy1)
    }

    func testControlJ() {
        popUpWithMouse()
        app.typeKey("j", modifierFlags: [.control])
        app.typeKey(.enter, modifierFlags: [])
        assertPasteboardStringEquals(copy2)
    }

    func testControlK() {
        popUpWithMouse()
        app.typeKey("j", modifierFlags: [.control])
        app.typeKey("k", modifierFlags: [.control])
        app.typeKey(.enter, modifierFlags: [])
        assertPasteboardStringEquals(copy1)
    }

    func testDeleteEntry() {
        popUpWithMouse()
        app.typeKey(.delete, modifierFlags: [.option])
        assertNotExists(items[copy1])

        app.typeKey(.escape, modifierFlags: [])
        popUpWithMouse()
        assertNotExists(items[copy1])
    }

    func testDeleteEntryDuringSearch() {
        popUpWithMouse()
        search(copy2)
        app.typeKey(.delete, modifierFlags: [.option])
        assertNotExists(items[copy2])

        app.typeKey(.escape, modifierFlags: [])
        popUpWithMouse()
        assertNotExists(items[copy2])
    }

    func testClear() {
        popUpWithMouse()
        pin(copy2)
        app.staticTexts["Clear"].click()
        confirmClear()
        popUpWithMouse()
        assertNotExists(items[copy1])
        assertExists(items[copy2])
    }

    func testClearDuringSearch() {
        popUpWithMouse()
        search(copy2)
        app.staticTexts["Clear"].click()
        confirmClear()
        popUpWithMouse()
        assertNotExists(items[copy1])
        assertNotExists(items[copy2])
    }

    func testClearAll() {
        popUpWithMouse()
        pin(copy2)
        XCUIElement.perform(withKeyModifiers: [.shift]) {
            app.staticTexts["Clear all"].click()
        }
        confirmClear()
        popUpWithMouse()
        assertNotExists(items[copy1])
        assertNotExists(items[copy2])
    }

    func testPin() {
        popUpWithMouse()
        pin(copy2)
        XCTAssertEqual(itemTitles[0 ... 1], [copy2, copy1])

        app.typeKey(.escape, modifierFlags: [])
        popUpWithMouse()
        XCTAssertEqual(itemTitles[0 ... 1], [copy2, copy1])
    }

    func testPinDuringSearch() {
        popUpWithMouse()
        search(copy2)
        pin(copy2)
        assertSearchFieldValue("")
        XCTAssertEqual(itemTitles[0 ... 1], [copy2, copy1])
    }

    func testUnpin() {
        popUpWithMouse()
        pin(copy2)
        pin(copy2)
        XCTAssertEqual(itemTitles[0 ... 1], [copy1, copy2])
    }

    func testRemoveLastWordFromSearchWithControlW() {
        popUpWithMouse()
        search("foo bar")
        app.typeKey("w", modifierFlags: [.control])
        assertSearchFieldValue("foo ")
    }

    func testPasteToSearch() {
        popUpWithMouse()
        app.typeKey("v", modifierFlags: [.command])
        waitForSearch()
        assertSearchFieldValue(copy1)
        assertExists(items[copy1])
        assertNotExists(items[copy2])
    }

    func testDisablesOnOptionClickingMenubarIcon() {
        XCUIElement.perform(withKeyModifiers: .option) {
            app.statusItems.firstMatch.click()
        }

        let copy3 = UUID().uuidString
        let copy4 = UUID().uuidString
        copyToClipboard(copy3)
        copyToClipboard(copy4)

        popUpWithMouse()
        assertNotExists(items[copy3])
        assertNotExists(items[copy4])

        app.typeKey(.escape, modifierFlags: [])
        XCUIElement.perform(withKeyModifiers: .option) {
            app.statusItems.firstMatch.click()
        }
    }

    func testDisablesOnlyForNextCopyOnOptionShiftClickingMenubarIcon() {
        XCUIElement.perform(withKeyModifiers: [.option, .shift]) {
            app.statusItems.firstMatch.click()
        }

        let copy3 = UUID().uuidString
        let copy4 = UUID().uuidString
        copyToClipboard(copy3)
        copyToClipboard(copy4)

        popUpWithMouse()
        assertNotExists(items[copy3])
        assertExists(items[copy4])
    }

    func testCreatesNewCopyOnEnterWhenSearchResultsAreEmpty() {
        popUpWithMouse()
        search("foo bar")
        app.typeKey(.return, modifierFlags: [])
        XCTAssertEqual(pasteboard.string(forType: .string), "foo bar")
        assertExists(items["foo bar"])
    }

    func testOpenAndClose() throws {
        // Simulate the popup hotkey press (Cmd + Shift + C).
        let cDown = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: true))
        cDown.flags = [.maskCommand, .maskShift]
        cDown.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        // Release the 'C' key but keep the popup open.
        let cUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: false))
        cUp.flags = [.maskCommand, .maskShift]
        cUp.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        // Release the 'Shift' key and assert that the popup remains open - "normal" mode.
        let shiftUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Shift), keyDown: false))
        shiftUp.flags = [.maskCommand] // Command remains active, Shift released
        shiftUp.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        // Release the 'CMD' key and assert that the popup remains open - "normal" mode.
        let commandUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Command), keyDown: false))
        commandUp.flags = []
        commandUp.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        // Press shortcut again and assert the window closes
        cDown.flags = [.maskCommand, .maskShift]
        cDown.post(tap: .cghidEventTap)

        assertPopupDismissed()
    }

    func testOpenAndSelectSecondItem() throws {
        // Simulate the popup hotkey press (Cmd + Shift + C).
        let cDown = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: true))
        cDown.flags = [.maskCommand, .maskShift]
        cDown.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        let cUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: false))
        cUp.flags = [.maskCommand, .maskShift]
        cUp.post(tap: .cghidEventTap)

        // Press C 1 more time while keeping the modifier keys pressed
        cDown.post(tap: .cghidEventTap)

        // Release all modifiers keys and assert that the popup closes.
        let modifiersUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Shift), keyDown: false))
        modifiersUp.flags = []
        modifiersUp.post(tap: .cghidEventTap)

        assertPopupDismissed()
        assertPasteboardStringEquals(copy2)
    }

    func testOpenAndSelectThirdItem() throws {
        copyToClipboard(copy3)

        // Simulate the popup hotkey press (Cmd + Shift + C).
        let cDown = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: true))
        cDown.flags = [.maskCommand, .maskShift]
        cDown.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        let cUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: false))
        cUp.flags = [.maskCommand, .maskShift]
        cUp.post(tap: .cghidEventTap)

        // Press C 2 more times while keeping the modifier keys pressed
        cDown.post(tap: .cghidEventTap)
        cUp.post(tap: .cghidEventTap)
        cDown.post(tap: .cghidEventTap)

        // Release all modifiers keys and assert that the popup closes.
        let modifiersUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Shift), keyDown: false))
        modifiersUp.flags = []
        modifiersUp.post(tap: .cghidEventTap)

        assertPopupDismissed()
        assertPasteboardStringEquals(copy2)
    }

    func testOpenAndSelectThirdItemRepeatedPress() throws {
        copyToClipboard(copy3)

        // Simulate the popup hotkey press (Cmd + Shift + C).
        let cDown = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: true))
        cDown.flags = [.maskCommand, .maskShift]
        cDown.post(tap: .cghidEventTap)

        waitUntilPoppedUp()

        // Press C 2 more times while keeping the modifier keys pressed
        cDown.post(tap: .cghidEventTap)
        cDown.post(tap: .cghidEventTap)

        // Release all modifiers keys and assert that the popup closes.
        let modifiersUp = try XCTUnwrap(CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Shift), keyDown: false))
        modifiersUp.flags = []
        modifiersUp.post(tap: .cghidEventTap)

        assertPopupDismissed()
        assertPasteboardStringEquals(copy2)
    }

    func testTogglePopupAndCloseOnClickOutside() {
        popUpWithHotkey()

        // Click outside the popup to close it
        let statusBar = app.statusItems.firstMatch
        let coordinate = statusBar.coordinate(withNormalizedOffset: CGVector(dx: 0.5, dy: 10.0))
        coordinate.click()
        assertNotExists(items[copy1])

        // Assert that the hotkeys still work
        popUpWithHotkey()

        simulatePopupHotkey()
        assertPopupDismissed()
    }

    private func popUpWithHotkey() {
        simulatePopupHotkey()
        waitUntilPoppedUp()
    }

    private func popUpWithMouse() {
        app.statusItems.firstMatch.click()
        waitUntilPoppedUp()
    }

    private func simulatePopupHotkey() {
        let commandDown = CGEvent(
            keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Command), keyDown: true
        )!
        let commandUp = CGEvent(
            keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Command), keyDown: false
        )!
        let shiftDown = CGEvent(
            keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Shift), keyDown: true
        )!
        let shiftUp = CGEvent(
            keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_Shift), keyDown: false
        )!
        shiftDown.flags = [.maskCommand]
        shiftUp.flags = [.maskCommand]
        let cDown = CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: true)!
        let cUp = CGEvent(keyboardEventSource: nil, virtualKey: CGKeyCode(kVK_ANSI_C), keyDown: false)!
        cDown.flags = [.maskCommand, .maskShift]
        cUp.flags = [.maskCommand, .maskShift]
        commandDown.post(tap: .cghidEventTap)
        shiftDown.post(tap: .cghidEventTap)
        cDown.post(tap: .cghidEventTap)
        cUp.post(tap: .cghidEventTap)
        shiftUp.post(tap: .cghidEventTap)
        commandUp.post(tap: .cghidEventTap)
    }

    private func waitUntilPoppedUp() {
        if !app.staticTexts.firstMatch.waitForExistence(timeout: 3) {
            XCTFail("ManisPocket did not pop up")
        }
    }

    private func assertPopupDismissed() {
        if !app.staticTexts.firstMatch.waitForNonExistence(timeout: 3) {
            XCTFail("ManisPocket did not dismiss")
        }
    }

    private func copyToClipboard(_ content: String) {
        pasteboard.clearContents()
        pasteboard.setString(content, forType: .string)
        waitTillClipboardCheck()
    }

    private func copyToClipboard(_ content: NSImage) {
        pasteboard.clearContents()
        pasteboard.setData(content.tiffRepresentation, forType: .tiff)
        waitTillClipboardCheck()
    }

    private func copyToClipboard(_ content: URL) {
        pasteboard.clearContents()
        pasteboard.setData(content.dataRepresentation, forType: .fileURL)
        // WTF: The subsequent writes to pasteboard are not
        // visible unless we explicitly read the last one?!
        pasteboard.string(forType: .fileURL)
        waitTillClipboardCheck()
    }

    private func copyToClipboard(_ content: Data?, _ type: NSPasteboard.PasteboardType) {
        pasteboard.clearContents()
        pasteboard.setData(content, forType: type)
        waitTillClipboardCheck()
    }

    /// Default interval for ManisPocket to check clipboard is 1 second
    private func waitTillClipboardCheck() {
        usleep(1_500_000)
    }

    private func pin(_ title: String) {
        hover(items[title].firstMatch)
        app.typeKey("p", modifierFlags: [.option])
        usleep(1_500_000)
    }

    private func hover(_ element: XCUIElement) {
        element.hover()
        usleep(20000)
    }

    private func search(_ string: String) {
        // NOTE: app.typeText is broken in Sonoma and causes some
        //       Chars to be submitted with a .command mask (e.g. 'p', 'k' or 'j')
        for item in string {
            app.typeKey("\(item)", modifierFlags: [])
        }
        waitForSearch()
    }

    private func waitForSearch() {
        // NOTE: This is a hack and is flaky.
        // Ideally we should wait for a proper condition to detect that search has settled down.
        usleep(500_000) // wait for search throttle
    }

    private func assertExists(_ element: XCUIElement) {
        expectation(for: NSPredicate(format: "exists = 1"), evaluatedWith: element)
        waitForExpectations(timeout: 3)
    }

    private func assertNotExists(_ element: XCUIElement) {
        expectation(for: NSPredicate(format: "exists = 0"), evaluatedWith: element)
        waitForExpectations(timeout: 3)
    }

    private func assertNotVisible(_ element: XCUIElement) {
        expectation(
            for: NSPredicate(format: "(exists = 0) || (isHittable = 0)"), evaluatedWith: element
        )
        waitForExpectations(timeout: 3)
    }

    private func assertPasteboardDataEquals(
        _ expected: Data?, forType: NSPasteboard.PasteboardType = .string
    ) {
        let predicate = NSPredicate { object, _ -> Bool in
            guard let copy = object as? Data else {
                return false
            }

            return self.pasteboard.data(forType: forType) == copy
        }
        expectation(for: predicate, evaluatedWith: expected)
        waitForExpectations(timeout: 3)
    }

    private func assertPasteboardDataCountEquals(
        _ expected: Int, forType: NSPasteboard.PasteboardType = .string
    ) {
        let predicate = NSPredicate { object, _ -> Bool in
            guard let count = object as? Int else {
                return false
            }

            return self.pasteboard.data(forType: forType)!.count == count
        }
        expectation(for: predicate, evaluatedWith: expected)
        waitForExpectations(timeout: 3)
    }

    private func assertPasteboardStringEquals(
        _ expected: String?, forType: NSPasteboard.PasteboardType = .string
    ) {
        let predicate = NSPredicate { object, _ -> Bool in
            guard let copy = object as? String else {
                return false
            }

            return self.pasteboard.string(forType: forType) == copy
        }
        expectation(for: predicate, evaluatedWith: expected)
        waitForExpectations(timeout: 3)
    }

    private func assertSearchFieldValue(_ string: String) {
        XCTAssertEqual(app.textFields.firstMatch.value as? String, string)
    }

    private func confirmClear() {
        let button = app.dialogs.firstMatch.buttons["Clear"].firstMatch
        expectation(for: NSPredicate(format: "isHittable = 1"), evaluatedWith: button)
        waitForExpectations(timeout: 3)
        button.click()
    }
}

// swiftlint:enable type_body_length
// swiftlint:enable file_length
